# morning-radio-2

./: .gitignore  AGENTS.md  INDEX.md  INSTALL.md  LICENSE_NOTES.md  README.md  README_ko.md  pyproject.toml
.agents/skills/build_quantum_weekly_radio_system/: SKILL.md
.agents/skills/generate_dual_host_weekly_radio_show/: SKILL.md
.agents/skills/harden_observability_fallbacks_and_tests/: SKILL.md
.agents/skills/implement_budget_aware_summarization/: SKILL.md
.agents/skills/implement_global_cross_source_dedup_and_ranking/: SKILL.md
.agents/skills/implement_source_adapter_contracts/: SKILL.md
.github/workflows/: weekly-quantum-radio.yml
docs/quantum_weekly_radio/: API_BUDGET_STRATEGY.md  ARCHITECTURE.md  CODEX_STARTER_COMMANDS_KO.md  DATA_MODELS.md  DECISION_LOG.md  FALLBACK_POLICY.md  IMPLEMENTATION_ORDER.md  MVP_TASKLIST.md  OUTPUT_SPEC.md  PHASED_ROADMAP.md  PROJECT_BRIEF_FOR_CODEX.md  PROJECT_BRIEF_KO.md  RESEARCH_NOTES.md  RUNBOOK.md  SCHEDULE_DELIVERY_PLAN.md  SOURCE_HEALTH_SCHEMA.md  SOURCE_MATRIX.md
examples/: sample_radio_script.md  sample_run_state.json  sample_source_health.json  sample_weekly_digest.md
src/morning_radio/: __init__.py  cli.py  gemini.py
src/morning_radio/weekly_quantum/: audio.py  (+14 more)
starter_overlay/: README.md  pyproject.fragment.md
templates/quantum_weekly_radio/: .env.example  dependency_patch.md
tests/weekly_quantum/: __init__.py  conftest.py  test_collectors.py  test_config.py  test_dedup.py  test_delivery.py  test_pipeline.py  test_ranking.py  test_script_writer.py  test_state_store.py  test_summarize.py  test_window.py
(+33 files in other folders)
