[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morning-radio"
version = "0.1.0"
description = "Daily Korean morning news radio briefing powered by Gemini and GitHub Actions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "google-genai>=1.66.0",
  "lameenc>=1.8.1",
  "python-dateutil>=2.9.0",
  "requests>=2.32.0",
]

[project.scripts]
morning-radio = "morning_radio.cli:main"
morning-radio-weekly-quantum = "morning_radio.weekly_quantum.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
